[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/LevelHouse.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Game.gd" type="Script" id=4]

[node name="Game" type="Node" groups=["games"]]
script = ExtResource( 4 )

[node name="LevelHouse" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="." groups=["cameras"]]
position = Vector2( 58, 18 )
current = true

[node name="SusUpdateTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="BustedTimer" type="Timer" parent="."]
wait_time = 3.5

[node name="WonTimer" type="Timer" parent="."]
wait_time = 3.5

[node name="SecondTimer" type="Timer" parent="."]
autostart = true
